@@ -138,7 +138,7 @@ mangle_filename(struct sfile * last, struct sfile const * sf, int counter, int c
 }
 
 
-int opd_open_sample_file(odb_t * file, struct sfile * last,
+int opd_open_sample_file(odb_t *file, struct sfile *last,
                          struct sfile * sf, int counter, int cg)
 {
 	char * mangled;
