@@ -27,7 +27,7 @@ struct sfile;
  *
  * Returns 0 on success.
  */
-int opd_open_sample_file(odb_t * file, struct sfile * last,
+int opd_open_sample_file(odb_t *file, struct sfile *last,
                          struct sfile * sf, int counter, int cg);
 
 #endif /* OPD_MANGLING_H */
